# lorrgs

./: README.md  cspell.json  pyproject.toml  ruff.toml
.github/workflows/: workflow.yml
data/: download.sh
lorgs/: utils.py
lorgs/clients/: sqs.py
lorgs/data/: __init__.py  season.py
lorgs/loaders/: actor_loader.py  base_loader.py  boss_loader.py  fight_loader.py  fight_phases.py  player_loader.py  report_loader.py  report_overview_loader.py  spec_ranking.py
lorgs/models/: difficulty.py  raid_boss.py  raid_zone.py  season.py  task_payloads.py  user.py  warcraftlogs_actor.py  warcraftlogs_boss.py  warcraftlogs_cast.py  warcraftlogs_comp_ranking.py  warcraftlogs_fight.py  warcraftlogs_player.py  warcraftlogs_ranking.py  warcraftlogs_report.py  warcraftlogs_user_report.py  wow_actor.py  wow_class.py  wow_item.py  wow_potion.py  wow_role.py  wow_spec.py  wow_spell.py
lorrgs_api/middlewares/: cors_middleware.py
lorrgs_api/routes/: api.py  api_comp_rankings.py  api_spec_rankings.py  api_tasks.py  api_user_reports.py  api_world_data.py  auth.py  debug.py
lorrgs_assets/: README.md
lorrgs_sqs/: exceptions.py  handler.py
lorrgs_sqs/task_handlers/: load_comp_rankings.py  load_spec_rankings.py  load_user_report.py
lorrgs_stats/: handler.py
scripts/: deploy.py  find_unused_spells.py  find_user_reports.py  flag_dirty.py  get_wcl_auth_token.py  load_images.py  load_report.py  queue_updates.py
scripts/migrations/: 002_convert_timestamps.py  003_add_difficulty.py  005_add_ttl_to_user_reports.py  add_region.py  add_region.sh  remove_reports_without_phases.py
(+100 files in other folders)
