[project]
name = "lorrgs"
version = "0.0.0-dev"
description = ""
requires-python = ">=3.13.0"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "blinker>=1.9.0",
    "fastapi>=0.135.1",
    "mangum>=0.21.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[cloudwatch,dynamodb,s3,sqs]>=1.42.68",
    "boto3>=1.42.68",
    "pillow>=12.1.1",
    "pip>=26.0.1",  # for deployment
    "pytest>=9.0.3",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.41.0",
]


[tool.isort]
line_length = 120
atomic = true
lines_after_imports = 2
profile = "black"


[tool.mypy]
exclude = ["venv"]
show_error_codes = true
# all strict flags
# strict = true
# warn_unused_configs = true
# disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true
# strict_concatenate = true


[[tool.mypy.overrides]]
module = "arrow"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "blinker"
ignore_missing_imports = true
